<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestsManagement.AddRestActivity"
    android:orientation="vertical"
    android:background="@color/background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_arrow_back"
                    android:layout_centerVertical="true"
                    android:onClick="BACK"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_rest"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:id="@+id/toolbar_title"
                    android:fontFamily="@font/myfontmedium"/>
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
        <ImageView
            android:id="@+id/logo_img"
            android:layout_marginTop="50dp"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:background="@drawable/logo2"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"/>
        <EditText
            android:id="@+id/rkm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/txt_login"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/rest_no"
            android:gravity="center"
            android:layout_below="@+id/logo_img"
            android:fontFamily="@font/myfontmedium"/>
        <EditText
            android:id="@+id/rest_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/txt_login"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/rest_name"
            android:gravity="center"
            android:layout_below="@+id/rkm"
            android:fontFamily="@font/myfontmedium"/>
        <EditText
            android:id="@+id/rest_address"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/txt_login"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/rest_address"
            android:fontFamily="@font/myfontmedium"
            android:gravity="center"
            android:layout_below="@+id/rest_name"/>
        <EditText
            android:id="@+id/rest_price"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/txt_login"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/rest_price"
            android:fontFamily="@font/myfontmedium"
            android:gravity="center"
            android:layout_below="@+id/rest_address"/>
        <EditText
            android:id="@+id/rest_details"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/txt_login"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/rest_details"
            android:fontFamily="@font/myfontmedium"
            android:gravity="center"
            android:layout_below="@+id/time_out"/>
        <Button
            android:id="@+id/time_in"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/txt_login"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/entry_time"
            android:fontFamily="@font/myfontmedium"
            android:gravity="center"
            android:layout_below="@+id/rest_price"
            android:onClick="InTime"/>
        <Button
            android:id="@+id/time_out"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/txt_login"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/out_time"
            android:fontFamily="@font/myfontmedium"
            android:gravity="center"
            android:layout_below="@+id/time_in"
            android:onClick="OutTime"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/btn_login"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/add_rest"
            android:fontFamily="@font/myfontmedium"
            android:layout_below="@+id/rest_details"
            android:textColor="@android:color/white"
            android:onClick="AddRest"/>
    </RelativeLayout>
</ScrollView>