<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/book_item_background"
    android:layout_margin="10dp">
    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@drawable/esteraha2"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"/>
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/image"
        android:orientation="vertical"
        android:layout_centerVertical="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest_no"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/myfontmedium"/>
            <TextView
                android:id="@+id/txt_esteraha_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:fontFamily="@font/myfontmedium"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest_name"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/myfontmedium"/>
            <TextView
                android:id="@+id/txt_esteraha_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="alm3mora"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/myfontmedium"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest_address"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/myfontmedium"/>
            <TextView
                android:id="@+id/txt_esteraha_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Alglaa st"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:fontFamily="@font/myfontmedium"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest_price"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/myfontmedium"/>
            <TextView
                android:id="@+id/txt_esteraha_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Alglaa st"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:fontFamily="@font/myfontmedium"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_book"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/book"
                android:textSize="12sp"
                android:layout_alignParentStart="true"
                android:layout_below="@id/linear"
                android:background="@drawable/btn_book_now"
                android:layout_margin="5dp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/myfontmedium"
                android:layout_gravity="center_vertical"/>
            <Button
                android:id="@+id/btn_details"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/rest_details"
                android:textSize="12sp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/linear"
                android:paddingStart="1dp"
                android:paddingEnd="1dp"
                android:background="@drawable/btn_details"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:fontFamily="@font/myfontmedium"/>
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>