<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView android:id="@+id/client_card"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="3dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_margin="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/client_img"
                android:layout_gravity="center_horizontal"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/myfontmedium"
                    android:text="@string/client_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="10sp"/>
                <TextView
                    android:id="@+id/client_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/myfontmedium"
                    android:text="احمد ابو شوشة"
                    android:textColor="@color/colorPrimary"
                    android:textSize="10sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/myfontmedium"
                    android:text="@string/national_num"
                    android:textColor="@color/colorPrimary"
                    android:textSize="10sp"/>
                <TextView
                    android:id="@+id/client_national_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/myfontmedium"
                    android:text="11223344"
                    android:textColor="@color/colorPrimary"
                    android:textSize="10sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/myfontmedium"
                    android:text="@string/phone"
                    android:textColor="@color/colorPrimary"
                    android:textSize="10sp"/>
                <TextView
                    android:id="@+id/client_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/myfontmedium"
                    android:text="01065242773"
                    android:textColor="@color/colorPrimary"
                    android:textSize="10sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/myfontmedium"
                    android:text="@string/status"
                    android:textColor="@color/colorPrimary"
                    android:textSize="10sp"/>
                <TextView
                    android:id="@+id/client_reserved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/myfontmedium"
                    android:text="لم يسبق له الحجز"
                    android:textColor="@color/colorPrimary"
                    android:textSize="10sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal">
                <Button
                    android:id="@+id/edit_client"
                    android:layout_width="60dp"
                    android:layout_height="20dp"
                    android:text="@string/update"
                    android:textSize="10sp"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_client_update_background"
                    android:fontFamily="@font/myfontmedium"
                    android:layout_marginEnd="5dp"/>
                <Button
                    android:id="@+id/delete_client"
                    android:layout_width="60dp"
                    android:layout_height="20dp"
                    android:text="@string/delete"
                    android:textSize="10sp"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_unbook"
                    android:fontFamily="@font/myfontmedium"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>