<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Reservation_Management.Fragments.DisconutRequests.DiscountRequests"
    android:gravity="center">
    <ImageButton
        android:id="@+id/btn_all_order"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/allrequsts"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/myfontmedium"
        android:text="@string/incomingorder"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="5dp">
            <ImageButton
                android:id="@+id/btn_accepted_order"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/accept_requests"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accepted_order"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/myfontmedium"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="5dp">
            <ImageButton
                android:id="@+id/refused_order"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/refuse" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refused_order"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/myfontmedium"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>